@@ -136,11 +136,16 @@ RITES_INLINE const char *approot_path( void )
   /* Inline helper to identify the root directory path for the running
    * application, (which "mingw-get" passes through the APPROOT variable
    * in the process environment)...
+   *
+   * Caution: although this is called more than once, DO NOT attempt to
+   * optimise getenv() lookup by saving the returned pointer across calls;
+   * the environment block may have been moved between calls, which makes
+   * the pointer returned from a previous call potentially invalid!
    */
-  static const char *approot = NULL;
-  return ((approot == NULL) && ((approot = getenv( "APPROOT" )) == NULL))
+  char *approot;
+  return ((approot = getenv( "APPROOT" )) == NULL)
 
-    ? "c:/mingw/"	/* default, for failed environment look-up */
+    ? "c:\\mingw\\"	/* default, for failed environment look-up */
     : approot;		/* normal return value */
 }
 
@@ -354,7 +359,7 @@ RITES_INLINE int pkgLastRites( int lock, const char *progname )
   /* We should never get to here; if we do...
    * Diagnose a problem, and bail out.
    */
-  fprintf( stderr, "%s: execl: ", progname ); perror( lastrites );
+  fprintf( stderr, "%s: execl: ", progname ); perror( rites );
   return EXIT_FATAL;
 }
 
